# dj_eshop

./: README.md  pyproject.toml
eshop/: settings.py  urls.py
store/: admin.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_remove_customer_zipcode_remove_product_composition_and_more.py  0003_alter_product_selling_price.py  0004_alter_payment_amount_alter_product_category_and_more.py  0005_alter_customer_mobile.py
store/static/store/css/: style.css
store/static/store/js/: myscript.js
store/templates/store/: about.html  add_to_cart.html  address.html  base.html  category.html  checkout.html  contact.html  customer_registration.html  home.html  login.html  orders.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  product_detail.html  profile.html  search.html  update_address.html  wishlist.html
