[tool.poetry]
name = "dj-eshop"
version = "0.1.0"
description = ""
authors = ["Saken Myrzabekov <myrzabekovsaken89@gmail.com>"]
readme = "README.md"
packages = [{include = "dj_eshop"}]

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.14.0"
markdown = "^3.5.2"
django-filter = "^23.5"
django-cors-headers = "^4.3.1"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.2.0"
razorpay = "^1.4.1"
python-dotenv = "^1.0.1"
django = "^5.0.1"
setuptools = "^69.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
